--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.0.14",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.21.0",
@@ -23,6 +24,7 @@
     "globals": "^16.0.0",
     "prettier": "3.5.3",
     "sass-embedded": "^1.85.1",
+    "tailwindcss": "^4.0.14",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
